--- a/CanvasDragNDrop/MainWindow.xaml
+++ b/CanvasDragNDrop/MainWindow.xaml
@@ -5,9 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CanvasDragNDrop"
         mc:Ignorable="d"
-        Title="Проектирование" 
-        Height="450" 
-        Width="1000">
+        Title="Главное окно" Height="450" Width="1000"
+        
+        
+        
+        WindowStartupLocation="CenterScreen"
+        >
     <Window.Resources>
         <Style x:Key="Comboboxbutton" TargetType="Button">
             <Setter Property="OverridesDefaultStyle" Value="True"/>
@@ -65,25 +68,119 @@
             </Setter>
         </Style>
     </Window.Resources>
-    <Border BorderBrush="Red" BorderThickness="0">
-        <Grid ShowGridLines="True">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="140"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
+    <ScrollViewer HorizontalScrollBarVisibility="Auto">
+        <Grid Margin="0,0,0,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30"></RowDefinition>
-                <RowDefinition></RowDefinition>
+                <RowDefinition Height="0.1*"/>
+                <RowDefinition Height="*"/>
+
             </Grid.RowDefinitions>
-            <Button Grid.Column="0" Grid.Row="0" Click="Button_Click">Добавить блок</Button>
-            <Button Height="30" Width="151" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="0" Click="Button_Pen_Click">Построить соединение</Button>
-            <ListBox  x:Name="elementList" Grid.Column="0" Grid.Row="1" Height="384" VerticalAlignment="Center">
-                <TextBlock FontWeight="Bold" Height="20" Width="120" TextAlignment="Center"><Run Text="Список объектов:"/></TextBlock>
-            </ListBox>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+
+            </Grid.ColumnDefinitions>
+            <ToolBar >
+                <Separator></Separator>
+                <Button Style="{StaticResource Comboboxbutton}" Click="Button_ClickProekt">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
+                        <TextBlock  Margin="10,0,-20,0">Проект</TextBlock>
+                        <Image Height="14" Width="14" Margin="40,5,0,0">
+                            <Image.Style>
+                                <Style TargetType="{x:Type Image}">
+                                    <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Path=IsMouseOver,
+                                        ElementName=CbmBorder}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/светлая стрелка.png"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor,
+                                        AncestorType={x:Type Button}, AncestorLevel=1},
+                                        Path=isPressed}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
+                    </StackPanel>
+                </Button>
+                <Separator></Separator>
+                <Button Style="{StaticResource Comboboxbutton}" Click="Button_ClickInstrument">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
+                        <TextBlock  Margin="10,0,-20,0">Инструменты</TextBlock>
+                        <Image Height="14" Width="14" Margin="40,5,0,0">
+                            <Image.Style>
+                                <Style TargetType="{x:Type Image}">
+                                    <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Path=IsMouseOver,
+                                        ElementName=CbmBorder}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/светлая стрелка.png"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor,
+                                        AncestorType={x:Type Button}, AncestorLevel=1},
+                                        Path=isPressed}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
+                    </StackPanel>
+                </Button>
+                <Separator></Separator>
+                <Button Style="{StaticResource Comboboxbutton}" Click="Button_Click_4">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,40,0">
+                        <TextBlock  Margin="10,0,-20,0">Добавить элемент на рабочую область</TextBlock>
+                        <Image Height="14" Width="14" Margin="40,5,0,0">
+                            <Image.Style>
+                                <Style TargetType="{x:Type Image}">
+                                    <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Path=IsMouseOver,
+                                        ElementName=CbmBorder}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/светлая стрелка.png"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor,
+                                        AncestorType={x:Type Button}, AncestorLevel=1},
+                                        Path=isPressed}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
+                    </StackPanel>
+                </Button>
+                <Separator></Separator>
+                <Button Style="{StaticResource Comboboxbutton}" Click="Button_ClickPolzovatel">
+                    <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
+                        <TextBlock  Margin="10,0,-20,0">Меню пользователя</TextBlock>
+                        <Image Height="14" Width="14" Margin="40,5,0,0">
+                            <Image.Style>
+                                <Style TargetType="{x:Type Image}">
+                                    <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Path=IsMouseOver,
+                                        ElementName=CbmBorder}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/светлая стрелка.png"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor,
+                                        AncestorType={x:Type Button}, AncestorLevel=1},
+                                        Path=isPressed}" Value="True">
+                                            <Setter Property="Source" Value="C:\Users\User\Desktop\RABoTA\ПНИ\WPF\testSamples\CanvasDragNDrop\CanvasDragNDrop\Resources/стре.png"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Image.Style>
+                        </Image>
+                    </StackPanel>
+                </Button>
+            </ToolBar>
             <Canvas 
                 Grid.Column="1"
                 Grid.Row="1"
-                Height="300" Width="600"
+                Height="350" Width="700"
                 x:Name="canvas"
                 AllowDrop="True" 
                 Background="LightGray" 
@@ -94,10 +191,146 @@
                 MouseLeftButtonUp="canvas_MouseLeftButtonUp"
                 MouseMove="canvas_MouseMove">
             </Canvas>
-            <Button Grid.Column="1" Grid.Row="0" Click="Button_Click_1" Content="Источник" Margin="151,0,369,0"/>
-            <Button Grid.Column="1" Grid.Row="0" Click="Button_Click_2" Content="Дисплей" Margin="291,0,229,0"/>
-            <Button Grid.Column="1" Grid.Row="0" Click="Button_Click_3" Content="Рассчет" Margin="431,0,89,0"/>
+            <Grid Name="Elementsgrid" Height="99" Width="204" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="372,39,0,0" Grid.RowSpan="2" Visibility="Hidden">
+                <Polygon Fill="Black" StrokeThickness="2" Stroke="Black"
+                     Points="0,8
+                     0,88
+                     195,88,
+                     195,8,
+                     37,8,29,0
+                     21,8"/>
+                <Polygon Fill="#FFECC0F8" StrokeThickness="1" Stroke="#FFEFD6F3"
+                     Points="0,8
+                     0,88
+                     195,88,
+                     195,8,
+                     37,8,29,0
+                     21,8"/>
+                <Grid Height="88" Width="195" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="31*"/>
+                        <ColumnDefinition Width="159*"/>
+                    </Grid.ColumnDefinitions>
+                    <ScrollViewer Grid.ColumnSpan="2">
+                        <StackPanel x:Name="UIElementList">
+                            <!--<Button Style="{StaticResource Cmbbtn}" Click="Button_Click"/>-->
+                        </StackPanel>
+                    </ScrollViewer>
+                    <!--<StackPanel Orientation="Vertical" Grid.ColumnSpan="2">
+                        
+                        --><!--<Button Style="{StaticResource Cmbbtn}" Content="4" Click="Button_Click"/>
+                        <Button Style="{StaticResource Cmbbtn}" Content="4"/>--><!--
+                    </StackPanel>-->
+                </Grid>
+
+            </Grid>
+            <Grid Name="Proektgrid" Grid.Row="1" Height="120" Width="200" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="63,0" Visibility="Hidden">
+                <Polygon Fill="Black" StrokeThickness="2" Stroke="Black"
+                     Points="0,8
+                     0,88
+                     195,88,
+                     195,8,
+                     37,8,29,0
+                     21,8"/>
+                <Polygon Fill="#FFECC0F8" StrokeThickness="1" Stroke="#FFEFD6F3"
+                     Points="0,8
+                     0,88
+                     195,88,
+                     195,8,
+                     37,8,29,0
+                     21,8"/>
+                <Grid Height="88" Width="195" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="31*"/>
+                        <ColumnDefinition Width="159*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Orientation="Vertical" Grid.ColumnSpan="2">
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Создать новый проект"/>
+                        </Button>
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Сохранить изменения"/>
+                        </Button>
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Синхронизировать данные"/>
+                        </Button>
+                    </StackPanel>
+                </Grid>
+
+            </Grid>
+            <Grid Name="Instrumentgrid" Grid.Row="1" Height="120" Width="300" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="190,0" Visibility="Hidden">
+                <Polygon Fill="Black" StrokeThickness="2" Stroke="Black"
+                     Points="0,8
+                     0,88
+                     275,88,
+                     275,8,
+                     17,8,25,0
+                     33,8"/>
+                <Polygon Fill="#FFECC0F8" StrokeThickness="1" Stroke="#FFEFD6F3"
+                     Points="0,8
+                     0,88
+                     275,88,
+                     275,8,
+                     17,8,25,0
+                     33,8"/>
+                <Grid Height="88" Width="275" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="31*"/>
+                        <ColumnDefinition Width="159*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Orientation="Vertical" Grid.ColumnSpan="2">
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Создать модель элемента"/>
+                        </Button>
+                        <Button Style="{StaticResource Cmbbtn}" Click="Button_Pen_Click">
+                            <TextBlock Text="Добавить поток" />
+                        </Button>
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Редактировать поток"/>
+                        </Button>
+                    </StackPanel>
+                </Grid>
+            </Grid>
+            <Grid Name="Polzovatelgrid" Grid.Row="1"  Height="120" Width="300" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="360,0,0,0" Visibility="Hidden">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="7*"/>
+                    <ColumnDefinition Width="13*"/>
+                </Grid.ColumnDefinitions>
+                <Polygon Fill="Black" StrokeThickness="2" Stroke="Black"
+                     Points="0,8
+                     0,88
+                     235,88,
+                     235,8,
+                     194,8,202,0
+                     210,8" Grid.ColumnSpan="2"/>
+                <Polygon Fill="#FFECC0F8" StrokeThickness="1" Stroke="#FFEFD6F3"
+                     Points="0,8
+                     0,88
+                     235,88,
+                     235,8,
+                     194,8,202,0
+                     210,8" Grid.ColumnSpan="2"/>
+                <Grid Height="88" Width="235" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0" Grid.ColumnSpan="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="31*"/>
+                        <ColumnDefinition Width="159*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Orientation="Vertical" Grid.ColumnSpan="2">
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Изменить логин/пароль"/>
+                        </Button>
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Посмотреть доступные проекты"/>
+                        </Button>
+                        <Button Style="{StaticResource Cmbbtn}">
+                            <TextBlock Text="Выйти"/>
+                        </Button>
+                    </StackPanel>
+                </Grid>
+            </Grid>
 
         </Grid>
-    </Border>
+
+    </ScrollViewer>
+
 </Window>
